tests/rosetta/out/Java/9-billion-names-of-god-the-integer.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/9-billion-names-of-god-the-integer.mochi:5:21: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/9-billion-names-of-god-the-integer.mochi:5:21

  5 |   while n > 1 && a[n-1] == 0 {
    |                     ^

help:
  Parse error occurred. Check syntax near this location.